fix simlinks + changing scrollbar

--- a/lcore/client/loadscreen/src/characterChoose/CharacterChoose.scss
+++ b/lcore/client/loadscreen/src/characterChoose/CharacterChoose.scss
@@ -8,10 +8,12 @@
     background-color: var(--TranquilLO);
     border-radius: 3vh;
     padding: 3vh;
+    font-family: font0, serif;
     
     
     .title {
-        font-size: 3vh;
+        font-size: 6vh;
+        font-family: font1, serif;
     }
     
     .seperator {
